--- a/nube-react/package.json
+++ b/nube-react/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.10.0",
     "firebase": "^11.8.1",
     "firebaseui": "^6.1.0",
     "react": "^19.1.0",
