--- a/nube-functions/firebase.json
+++ b/nube-functions/firebase.json
@@ -1,6 +1,7 @@
 {
   "functions": [
     {
+      "runtime": "nodejs20",
       "source": "functions",
       "codebase": "default",
       "ignore": [
