--- a/nube-functions/functions/package.json
+++ b/nube-functions/functions/package.json
@@ -16,6 +16,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1"
   },
