--- a/nube-react/package.json
+++ b/nube-react/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^9.35.0",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.10.0",
     "firebase": "^11.8.1",
